--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@
 header h2 {
     font-family: Homemade Apple;
     color: var(--white);
-    font-size: 2vw;
+    font-size: 1.7vw;
 }
 
 .menu-nav{
@@ -89,6 +89,7 @@ header h2 {
     border-radius: 50px;
     position: relative;
     right: 0%;
+    cursor: pointer;
 }
 
 .menu-nav::after{
@@ -100,6 +101,7 @@ header h2 {
     border-radius: 50px;
     top: 8px;
     right: 0%;
+    cursor: pointer;
 }
 
 .menu-nav::before{
@@ -111,7 +113,130 @@ header h2 {
     border-radius: 50px;
     bottom: 8px;
     right: 0%;
+    cursor: pointer;
 }
+
+/* ----------menu-nav-container-------------- */
+
+/* Style for the settings modal overlay */
+#settingsModal {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left:0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+    height:100%;
+
+    background: rgba(15, 15, 15, 0.21);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px); 
+}
+
+.custom-modal-content {
+    background-color: #22272E;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    width: 35%;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 15px;
+    right: 0px;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    animation: animateModal 0.4s;
+    z-index: 999;
+}
+
+@keyframes animateModal {
+    from {
+        right: -100%;
+        opacity: 0;
+    }
+
+    to {
+        right: 0%;
+        opacity: 1;
+    }
+}
+
+@keyframes animateCloseModal {
+    from {
+        right: 0%;
+        opacity: 1;
+    }
+
+    to {
+        right: -100%;
+        opacity: 1;
+    }
+}
+
+.custom-modal-content ul{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    flex-direction: column;
+    list-style-type: none; 
+}
+
+.custom-modal-content ul a{
+    text-decoration: none;
+    color: var(--white);
+}
+
+.custom-modal-content ul a:hover{
+    text-decoration: underline;
+}
+
+
+.header-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    margin-top: -1rem;
+    width: 100%;
+    padding: 0rem 1rem;
+}
+
+
+.close {
+    font-size: 40px;
+    cursor: pointer;
+    color: var(--white);
+    position: absolute;
+    top: 20px;
+    right:20px;
+}
+
+.close svg {
+    width: 30px;
+    height: 30px;
+    fill: var(--white);
+}
+
+.close svg:hover {
+    fill: royalblue;
+}
+
+.custom-modal-content h2 {
+    font-size: 24px;
+    color: #333;
+}
+
+
+/* ---------------Hero-Section---------- */
 
 .hero {
     width: 100%;
