--- a/style.css
+++ b/style.css
@@ -82,14 +82,23 @@ header h2 {
     font-size: 1.7vw;
 }
 
+.menu-nav-container{
+    width: 60px;
+    cursor: pointer;
+    height: 40px;
+    position:relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .menu-nav{
     width: 42px;
     height: 2px;
     background-color: var(--white);
     border-radius: 50px;
-    position: relative;
+    position: absolute;
     right: 0%;
-    cursor: pointer;
 }
 
 .menu-nav::after{
@@ -101,7 +110,6 @@ header h2 {
     border-radius: 50px;
     top: 8px;
     right: 0%;
-    cursor: pointer;
 }
 
 .menu-nav::before{
@@ -113,7 +121,7 @@ header h2 {
     border-radius: 50px;
     bottom: 8px;
     right: 0%;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 
 /* ----------menu-nav-container-------------- */
@@ -166,6 +174,18 @@ header h2 {
 
     to {
         right: 0%;
+        opacity: 1;
+    }
+}
+
+@keyframes animateModelAbout {
+    from {
+         left: -100%;
+        opacity: 0;
+    }
+
+    to {
+        left: 0%;
         opacity: 1;
     }
 }
@@ -285,12 +305,34 @@ header h2 {
 }
 
 #container .cursor {
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     background-color: white;
     border-radius: 50px;
     position: absolute;
     transition: 0.1s;
     mix-blend-mode: difference;
     display: none;
+}
+
+/* ---------About me Section-------------- */
+
+#aboutme{
+    background-color: #22272E;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 15px;
+    right: 0px;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    animation: animateModelAbout 1s;
+    z-index: 999; 
 }
